# gnome-subfinder

./: .gitignore  GnomeSubfinder.sln  autogen.sh  configure.ac
m4/: build.mk  mono.m4
po/: Translator.mdproj  pl.po
src/: AssemblyInfo.cs.in  Makefile.am
src/Backends/: Makefile.am
src/Backends/Backends.OpenSubtitles.org/: GnomeSubfinder.OpenSubtitles.org.csproj  IXmlRpcApi.cs  Makefile.am  OpenSubtitlesBackend.cs
src/Backends/Backends.OpenSubtitles.org/Properties/: AssemblyInfo.cs
src/Clients/: Makefile.am
src/Clients/Subfinder/: ErrorsDialog.cs  MainWindow.cs  Makefile.am  PreferencesDialog.cs  Subfinder.cs  Subfinder.csproj  Utils.cs  subfinder-errors.glade  subfinder-properties.glade  subfinder.glade  subfinder.glade~
src/Clients/SubfinderConsole/: Makefile.am  Options.cs  SubfinderConsole.cs  SubfinderConsole.csproj
src/Clients/SubfinderConsole/Properties/: AssemblyInfo.cs
src/Core/: Makefile.am
src/Core/GnomeSubfinder.Core/: BackendCollection.cs  BackendManager.cs  EncodeChanger.cs  GnomeSubfinder.Core.csproj  LanguageSet.cs  Makefile.am  Preferences.cs  SubtitleDownloader.cs  SubtitleFileInfoTest.cs  SubtitleSaver.cs
src/Core/GnomeSubfinder.Core/Properties/: AssemblyInfo.cs
src/Core/GnomeSubfinder.CoreTest/: GnomeSubfinder.CoreTest.csproj  SubtitleFileInfoTest.cs
src/Core/GnomeSubfinder.DataStructures/: GnomeSubfinder.DataStructures.csproj  IBackend.cs  Makefile.am  SubtitleFileInfo.cs  VideoFileInfo.cs
src/Core/GnomeSubfinder.DataStructures/Properties/: AssemblyInfo.cs
src/Core/GnomeSubfinder.GUIHelper/: GnomeSubfinder.GUIHelper.csproj  LanguageSet.cs  Makefile.am
src/Core/GnomeSubfinder.Interfaces/: GnomeSubfinder.Interfaces.csproj  IBackend.cs  SubtitleFileInfo.cs  VideoFileInfo.cs
src/testapp/: Program.cs  testapp.csproj
src/testapp/Properties/: AssemblyInfo.cs
src/xml-rpc.net/: Makefile.am  xmlrpc.csproj
