ASSEMBLY = xml-rpc-net
MCS_OPTIONS = -r:System.Web
# todo AssemblyDescFX1_0.cs

SOURCES = AssemblyBuildNumber.cs \
AssemblyDesc.cs \
AssemblyInfo.cs \
DateTime8601.cs \
GuidEx.cs \
IHttpRequest.cs \
IHttpRequestHandler.cs \
IHttpResponse.cs \
IXmlRpcProxy.cs \
RequestResponseLogger.cs \
SystemMethodsBase.cs \
Tracer.cs \
util.cs \
XmlRpcAsyncResult.cs \
XmlRpcBeginAttribute.cs \
XmlRpcBoolean.cs \
XmlRpcClientFormatterSink.cs \
XmlRpcClientFormatterSinkProvider.cs \
XmlRpcClientProtocol.cs \
XmlRpcDateTime.cs \
XmlRpcDocWriter.cs \
XmlRpcDouble.cs \
XmlRpcEndAttribute.cs \
XmlRpcException.cs \
XmlRpcFaultException.cs \
XmlRpcHttpRequest.cs \
XmlRpcHttpResponse.cs \
XmlRpcHttpServerProtocol.cs \
XmlRpcInt.cs \
XmlRpcListenerRequest.cs \
XmlRpcListenerResponse.cs \
XmlRpcListenerService.cs \
XmlRpcLogger.cs \
XmlRpcMemberAttribute.cs \
XmlRpcMethodAttribute.cs \
XmlRpcMethodInfo.cs \
XmlRpcMissingMappingAttribute.cs \
XmlRpcNonStandard.cs \
XmlRpcParameterAttribute.cs \
XmlRpcParameterInfo.cs \
XmlRpcProxyCodeGen.cs \
XmlRpcProxyGen.cs \
XmlRpcRequest.cs \
XmlRpcRequestEventArgs.cs \
XmlRpcResponse.cs \
XmlRpcResponseEventArgs.cs \
XmlRpcReturnValueAttribute.cs \
XmlRpcSerializer.cs \
XmlRpcServerFormatterSink.cs \
XmlRpcServerFormatterSinkProvider.cs \
XmlRpcServerProtocol.cs \
XmlRpcServiceAttribute.cs \
XmlRpcService.cs \
XmlRpcServiceInfo.cs \
XmlRpcStruct.cs \
XmlRpcUrlAttribute.cs

TARGET = library

include $(top_srcdir)/m4/build.mk
