ASSEMBLY = Subfinder
SOURCES = MainWindow.cs PreferencesDialog.cs Subfinder.cs 
MCS_OPTIONS = -r:GnomeSubfinder.Core.dll -r:GnomeSubfinder.DataStructures.dll -r:GnomeSubfinder.GUIHelper.dll -r:SubfinderConsole.exe -r:System.Configuration -r:Mono.Posix $(GLIBSHARP_LIBS) $(GTKSHARP_LIBS)
TARGET = exe

include $(top_srcdir)/m4/build.mk
