ASSEMBLY = GnomeSubfinder.Core
SOURCES = BackendCollection.cs Preferences.cs SubtitleDownloader.cs SubtitleSaver.cs BackendManager.cs LanguageSet.cs EncodeChanger.cs
MCS_OPTIONS = -r:GnomeSubfinder.DataStructures.dll -r:System.Configuration
TARGET = library
REFERENCES  = $(BIN_DIR)/GnomeSubfinder.DataStructures.dll System.Configuration

include $(top_srcdir)/m4/build.mk
